[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-phantom"
version = "1.0.0"
description = "Async multi-engine reconnaissance & vulnerability scanner"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Lappy000"}]
keywords = ["security", "scanner", "reconnaissance", "pentest", "vulnerability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "httpx[http2]>=0.27.0",
    "aiofiles>=24.1.0",
    "aiodns>=3.2.0",
    "asyncio-throttle>=1.0.2",
    "beautifulsoup4>=4.12.0",
    "cryptography>=42.0.0",
    "dnspython>=2.7.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "orjson>=3.10.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-whois>=0.9.0",
    "rich>=13.9.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=62.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-httpx>=0.30", "ruff>=0.7"]

[project.scripts]
recon-phantom = "recon_phantom.cli:app"

[tool.setuptools.packages.find]
include = ["recon_phantom*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
